--- a/recipes/downstream_librispeech/ASR/seq2seq/train/hparams/librispeech_softmax.yaml
+++ b/recipes/downstream_librispeech/ASR/seq2seq/train/hparams/librispeech_softmax.yaml
@@ -42,7 +42,7 @@ number_of_ctc_epochs: 5
 batch_size: 8
 lr: 1.0
 ctc_weight: 0.5
-sorting: ascending
+sorting: descending
 #dynamic_batching: True
 baseline: False
 #dynamic_batch_sampler:
