--- a/recipes/downstream_librispeech/ASR/seq2seq/train/hparams/librispeech_softmax.yaml
+++ b/recipes/downstream_librispeech/ASR/seq2seq/train/hparams/librispeech_softmax.yaml
@@ -39,10 +39,10 @@ test_csv:
 # Training parameters
 number_of_epochs: 20
 number_of_ctc_epochs: 10
-batch_size: 4
+batch_size: 8
 lr: 1.0
 ctc_weight: 0.5
-sorting: ascending
+sorting: descending
 #dynamic_batching: True
 baseline: False
 #dynamic_batch_sampler:
@@ -79,10 +79,10 @@ test_dataloader_opts:
 # Model parameters
 activation: !name:torch.nn.LeakyReLU
 dropout: 0.15
-cnn_blocks: 2
-cnn_channels: (128, 256)
-inter_layer_pooling_size: (2, 2)
-cnn_kernelsize: (3, 3)
+cnn_blocks: 3
+cnn_channels: (128, 200, 256)
+inter_layer_pooling_size: (2, 2, 2)
+cnn_kernelsize: (3, 3, 3)
 time_pooling_size: 4
 rnn_class: !name:speechbrain.nnet.RNN.LSTM
 rnn_layers: 4
