--- a/recipes/downstream_librispeech/ASR/seq2seq/train/hparams/librispeech_softmax_rnnpool_pase_noam.yaml
+++ b/recipes/downstream_librispeech/ASR/seq2seq/train/hparams/librispeech_softmax_rnnpool_pase_noam.yaml
@@ -263,7 +263,7 @@ checkpointer: !new:speechbrain.utils.checkpoints.Checkpointer
    checkpoints_dir: !ref <save_folder>
    recoverables:
       model: !ref <model>
-      scheduler: !ref <lr_annealing>
+      scheduler: !ref <noam_annealing>
       normalizer: !ref <normalize>
       counter: !ref <epoch_counter>
 
