--- a/recipes/downstream_librispeech/ASR/seq2seq/train/hparams/librispeech_softmax.yaml
+++ b/recipes/downstream_librispeech/ASR/seq2seq/train/hparams/librispeech_softmax.yaml
@@ -37,8 +37,8 @@ test_csv:
    - !ref <data_folder>/test-other.csv
 
 # Training parameters
-number_of_epochs: 20
-number_of_ctc_epochs: 10
+number_of_epochs: 30
+number_of_ctc_epochs: 20
 batch_size: 6
 lr: 1.0
 ctc_weight: 0.5
@@ -69,11 +69,11 @@ train_dataloader_opts:
    num_workers: 4
 
 valid_dataloader_opts:
-   batch_size: !ref <batch_size>
+   batch_size: 1
    num_workers: 4
 
 test_dataloader_opts:
-   batch_size: !ref <batch_size>
+   batch_size: 1
    num_workers: 4
 
 # Model parameters
@@ -101,7 +101,7 @@ unk_index: 0
 # Decoding parameters
 min_decode_ratio: 0.0
 max_decode_ratio: 1.0
-valid_beam_size: 10
+valid_beam_size: 80
 test_beam_size: 80
 eos_threshold: 1.5
 using_max_attn_shift: True
