--- a/recipes/downstream_librispeech/ASR/seq2seq/train/good_pase_hyperparams/softmax_librispeech.yaml
+++ b/recipes/downstream_librispeech/ASR/seq2seq/train/good_pase_hyperparams/softmax_librispeech.yaml
@@ -10,7 +10,7 @@
 seed: 2210
 __set_seed: !!python/object/apply:torch.manual_seed [!ref <seed>]
 #output_folder: !ref results/CRDNN_fr/<seed>
-output_folder: librispeech_softmax
+output_folder: pase_pretrained/librispeech_softmax/workers_save/
 csv_folder: /ldaphome/szaiem/github_backup/new_sb/speechbrain/recipes/CommonVoice/smaller/
 #wer_file: !ref <output_folder>/wer.txt
 save_folder: !ref <output_folder>/workers_save
