--- a/recipes/downstream_librispeech/ASR/seq2seq/train/hparams/librispeech_softmax_finetune.yaml
+++ b/recipes/downstream_librispeech/ASR/seq2seq/train/hparams/librispeech_softmax_finetune.yaml
@@ -33,7 +33,7 @@ dev_splits: ["dev-clean"]
 test_splits: ["test-clean", "test-other"]
 skip_prep: False
 train_csv: !ref <data_folder>/train_small.csv
-valid_csv: !ref <data_folder>/dev-clean.csv
+valid_csv: !ref <data_folder>/train_small.csv
 test_csv:
    - !ref <data_folder>/test-clean.csv
    - !ref <data_folder>/test-other.csv
@@ -105,7 +105,7 @@ unk_index: 0
 # Decoding parameters
 min_decode_ratio: 0.0
 max_decode_ratio: 1.0
-valid_beam_size: 80
+valid_beam_size: 1
 test_beam_size: 80
 eos_threshold: 1.5
 using_max_attn_shift: True
