--- a/recipes/downstream_librispeech/ASR/seq2seq/train/hparams/librispeech_softmax_finetune.yaml
+++ b/recipes/downstream_librispeech/ASR/seq2seq/train/hparams/librispeech_softmax_finetune.yaml
@@ -39,8 +39,8 @@ test_csv:
    - !ref <data_folder>/test-other.csv
 
 # Training parameters
-number_of_epochs: 35
-number_of_ctc_epochs: 35
+number_of_epochs: 30
+number_of_ctc_epochs: 30
 batch_size: 8
 lr: 1.0
 ctc_weight: 0.5
@@ -77,7 +77,7 @@ valid_dataloader_opts:
    num_workers: 4
 
 test_dataloader_opts:
-   batch_size: 1
+   batch_size: !ref <batch_size>
    num_workers: 4
 
 # Model parameters
@@ -106,7 +106,7 @@ unk_index: 0
 min_decode_ratio: 0.0
 max_decode_ratio: 1.0
 valid_beam_size: 1
-test_beam_size: 80
+test_beam_size: 1
 eos_threshold: 1.5
 using_max_attn_shift: True
 max_attn_shift: 240
