--- a/recipes/downstream_librispeech/ASR/seq2seq/train/hparams/librispeech_softmax_finetune.yaml
+++ b/recipes/downstream_librispeech/ASR/seq2seq/train/hparams/librispeech_softmax_finetune.yaml
@@ -32,8 +32,8 @@ train_splits: ["dev-clean"]
 dev_splits: ["dev-clean"]
 test_splits: ["test-clean", "test-other"]
 skip_prep: False
-train_csv: !ref <data_folder>/train_small.csv
-valid_csv: !ref <data_folder>/train_small.csv
+train_csv: !ref <data_folder>/train.csv
+valid_csv: !ref <data_folder>/dev-clean.csv
 test_csv:
    - !ref <data_folder>/test-clean.csv
    - !ref <data_folder>/test-other.csv
