--- a/recipes/downstream_librispeech/ASR/seq2seq/train/hparams/librispeech_softmax.yaml
+++ b/recipes/downstream_librispeech/ASR/seq2seq/train/hparams/librispeech_softmax.yaml
@@ -38,7 +38,7 @@ test_csv:
 
 # Training parameters
 number_of_epochs: 30
-number_of_ctc_epochs: 20
+number_of_ctc_epochs: 30
 batch_size: 6
 lr: 1.0
 ctc_weight: 0.5
@@ -69,18 +69,18 @@ train_dataloader_opts:
    num_workers: 4
 
 valid_dataloader_opts:
-   batch_size: 1
+   batch_size: !ref <batch_size>
    num_workers: 4
 
 test_dataloader_opts:
-   batch_size: 1
+   batch_size: !ref <batch_size>
    num_workers: 4
 
 # Model parameters
 activation: !name:torch.nn.LeakyReLU
 dropout: 0.15
 cnn_blocks: 3
-cnn_channels: (64, 100, 100)
+cnn_channels: (64, 100, 128)
 inter_layer_pooling_size: (2, 2, 2)
 cnn_kernelsize: (3, 3)
 time_pooling_size: 4
@@ -101,8 +101,8 @@ unk_index: 0
 # Decoding parameters
 min_decode_ratio: 0.0
 max_decode_ratio: 1.0
-valid_beam_size: 80
-test_beam_size: 80
+valid_beam_size: 1
+test_beam_size: 1
 eos_threshold: 1.5
 using_max_attn_shift: True
 max_attn_shift: 240
