--- a/recipes/downstream_librispeech/ASR/seq2seq/train/hparams/librispeech_softmax.yaml
+++ b/recipes/downstream_librispeech/ASR/seq2seq/train/hparams/librispeech_softmax.yaml
@@ -232,26 +232,26 @@ valid_search: !new:speechbrain.decoders.S2SRNNBeamSearcher
    coverage_penalty: !ref <coverage_penalty>
    temperature: !ref <temperature>
 
-#test_search: !new:speechbrain.decoders.S2SRNNBeamSearchLM
-#   embedding: !ref <emb>
-#   decoder: !ref <dec>
-#   linear: !ref <seq_lin>
-#   ctc_linear: !ref <ctc_lin>
-#   language_model: !ref <lm_model>
-#   bos_index: !ref <bos_index>
-#   eos_index: !ref <eos_index>
-#   blank_index: !ref <blank_index>
-#   min_decode_ratio: !ref <min_decode_ratio>
-#   max_decode_ratio: !ref <max_decode_ratio>
-#   beam_size: !ref <test_beam_size>
-#   eos_threshold: !ref <eos_threshold>
-#   using_max_attn_shift: !ref <using_max_attn_shift>
-#   max_attn_shift: !ref <max_attn_shift>
-#   coverage_penalty: !ref <coverage_penalty>
-#   lm_weight: !ref <lm_weight>
-#   ctc_weight: !ref <ctc_weight_decode>
-#   temperature: !ref <temperature>
-#   temperature_lm: !ref <temperature_lm>
+test_search: !new:speechbrain.decoders.S2SRNNBeamSearchLM
+   embedding: !ref <emb>
+   decoder: !ref <dec>
+   linear: !ref <seq_lin>
+   ctc_linear: !ref <ctc_lin>
+   language_model: !ref <lm_model>
+   bos_index: !ref <bos_index>
+   eos_index: !ref <eos_index>
+   blank_index: !ref <blank_index>
+   min_decode_ratio: !ref <min_decode_ratio>
+   max_decode_ratio: !ref <max_decode_ratio>
+   beam_size: !ref <test_beam_size>
+   eos_threshold: !ref <eos_threshold>
+   using_max_attn_shift: !ref <using_max_attn_shift>
+   max_attn_shift: !ref <max_attn_shift>
+   coverage_penalty: !ref <coverage_penalty>
+   lm_weight: !ref <lm_weight>
+   ctc_weight: !ref <ctc_weight_decode>
+   temperature: !ref <temperature>
+   temperature_lm: !ref <temperature_lm>
 
 lr_annealing: !new:speechbrain.nnet.schedulers.NewBobScheduler
    initial_value: !ref <lr>
