--- a/recipes/CommonVoice/ASR/seq2seq/hparams/fr/tea1.yaml
+++ b/recipes/CommonVoice/ASR/seq2seq/hparams/fr/tea1.yaml
@@ -35,6 +35,7 @@ number_of_ctc_epochs: 20
 lr: 1.0
 ctc_weight: 0.3
 sorting: ascending
+ckpt_interval_minutes: 30 # save checkpoint every N min
 
 # With data_parallel batch_size is split into N jobs
 # With DDP batch_size is multiplied by N jobs
