--- a/recipes/CommonVoice/ASR/seq2seq/hparams/fr/tea11.yaml
+++ b/recipes/CommonVoice/ASR/seq2seq/hparams/fr/tea11.yaml
@@ -33,7 +33,7 @@ avoid_if_longer_than: 10.0
 number_of_epochs: 25
 number_of_ctc_epochs: 20
 lr: 1.0
-ctc_weight: 0.3
+ctc_weight: 0.7
 sorting: ascending
 ckpt_interval_minutes: 30 # save checkpoint every N min
 
@@ -67,7 +67,7 @@ cnn_channels: (128, 200, 256)
 inter_layer_pooling_size: (2, 2, 2)
 cnn_kernelsize: (3, 3)
 time_pooling_size: 4
-rnn_class: !name:speechbrain.nnet.RNN.GRU
+rnn_class: !name:speechbrain.nnet.RNN.LSTM
 rnn_layers: 5
 rnn_neurons: 1024
 rnn_bidirectional: True
