--- a/recipes/CommonVoice/ASR/seq2seq/hparams/fr/tea13.yaml
+++ b/recipes/CommonVoice/ASR/seq2seq/hparams/fr/tea13.yaml
@@ -114,7 +114,7 @@ compute_features: !new:speechbrain.lobes.features.Fbank
     n_fft: !ref <n_fft>
     n_mels: !ref <n_mels>
 
-enc: !new:speechbrain.lobes.models.ESPnetVGG
+enc: !new:speechbrain.lobes.models.ESPnetVGG.ESPnetVGG
     input_shape: [null, null, !ref <n_mels>]
     activation: !ref <activation>
     dropout: !ref <dropout>
