--- a/recipes/CommonVoice/ASR/seq2seq/hparams/fr/tea0.yaml
+++ b/recipes/CommonVoice/ASR/seq2seq/hparams/fr/tea0.yaml
@@ -181,6 +181,7 @@ modules:
     ctc_lin: !ref <ctc_lin>
     seq_lin: !ref <seq_lin>
     normalize: !ref <normalize>
+    log_softmax: !ref <log_softmax>
 
 model: !new:torch.nn.ModuleList
     - [!ref <enc>, !ref <emb>, !ref <dec>, !ref <ctc_lin>, !ref <seq_lin>]
