--- a/recipes/CommonVoice/ASR/seq2seq/hparams/fr/tea0.yaml
+++ b/recipes/CommonVoice/ASR/seq2seq/hparams/fr/tea0.yaml
@@ -128,7 +128,7 @@ enc: !new:speechbrain.lobes.models.CRDNN.CRDNN
     cnn_channels: !ref <cnn_channels>
     cnn_kernelsize: !ref <cnn_kernelsize>
     inter_layer_pooling_size: !ref <inter_layer_pooling_size>
-    time_pooling: True
+    time_pooling: False
     using_2d_pooling: False
     time_pooling_size: !ref <time_pooling_size>
     rnn_class: !ref <rnn_class>
@@ -138,7 +138,6 @@ enc: !new:speechbrain.lobes.models.CRDNN.CRDNN
     rnn_re_init: True
     dnn_blocks: !ref <dnn_blocks>
     dnn_neurons: !ref <dnn_neurons>
-    use_rnnp: True
 
 emb: !new:speechbrain.nnet.embedding.Embedding
     num_embeddings: !ref <output_neurons>
