--- a/recipes/CommonVoice/ASR/seq2seq/hparams/fr/tea0.yaml
+++ b/recipes/CommonVoice/ASR/seq2seq/hparams/fr/tea0.yaml
@@ -32,7 +32,7 @@ avoid_if_longer_than: 10.0
 # Training parameters
 number_of_epochs: 25
 number_of_ctc_epochs: 0
-lr: 1.0
+lr: 0.1
 ctc_weight: 0.0
 sorting: ascending
 ckpt_interval_minutes: 30 # save checkpoint every N min
@@ -128,7 +128,7 @@ enc: !new:speechbrain.lobes.models.CRDNN.CRDNN
     cnn_channels: !ref <cnn_channels>
     cnn_kernelsize: !ref <cnn_kernelsize>
     inter_layer_pooling_size: !ref <inter_layer_pooling_size>
-    time_pooling: False
+    time_pooling: True
     using_2d_pooling: False
     time_pooling_size: !ref <time_pooling_size>
     rnn_class: !ref <rnn_class>
