--- a/recipes/CommonVoice/ASR/seq2seq/hparams/fr/tea0.yaml
+++ b/recipes/CommonVoice/ASR/seq2seq/hparams/fr/tea0.yaml
@@ -67,7 +67,7 @@ cnn_channels: (128, 200, 256)
 inter_layer_pooling_size: (2, 2, 2)
 cnn_kernelsize: (3, 3)
 time_pooling_size: 4
-rnn_class: !name:speechbrain.nnet.RNN.LSTM
+rnn_class: !name:speechbrain.nnet.RNN.GRU
 rnn_layers: 5
 rnn_neurons: 1024
 rnn_bidirectional: True
