--- a/recipes/mustc-v1/ST/seq2seq/hparams/train.yaml
+++ b/recipes/mustc-v1/ST/seq2seq/hparams/train.yaml
@@ -221,7 +221,8 @@ checkpointer: !new:speechbrain.utils.checkpoints.Checkpointer
 train_logger: !new:speechbrain.utils.train_logger.FileTrainLogger
     save_file: !ref <train_log>
 
+# Metrics (CER / WER / ACC)
 error_rate_computer: !name:speechbrain.utils.metric_stats.ErrorRateStats
-
+acc_computer: !name:speechbrain.utils.Accuracy.AccuracyStats
 cer_computer: !name:speechbrain.utils.metric_stats.ErrorRateStats
     split_tokens: True
