--- a/recipes/mustc-v1/ST/seq2seq/hparams/train_espnet.yaml
+++ b/recipes/mustc-v1/ST/seq2seq/hparams/train_espnet.yaml
@@ -138,7 +138,7 @@ emb: !new:speechbrain.nnet.embedding.Embedding
     embedding_dim: !ref <emb_size>
 
 dec: !new:speechbrain.nnet.RNN.AttentionalRNNDecoder
-    enc_dim: !ref <dnn_neurons>
+    enc_dim: 1024
     input_size: !ref <emb_size>
     rnn_type: lstm
     attn_type: content
