--- a/recipes/mustc-v1/ST/seq2seq/hparams/train_espnet.yaml
+++ b/recipes/mustc-v1/ST/seq2seq/hparams/train_espnet.yaml
@@ -35,6 +35,7 @@ number_of_ctc_epochs: 0
 lr: 1.0
 ctc_weight: 0.0
 sorting: random
+gradient_clipping: 5.0
 
 # With data_parallel batch_size is split into N jobs
 # With DDP batch_size is multiplied by N jobs
