--- a/recipes/mustc-v1/ST/seq2seq/hparams/train_espnet.yaml
+++ b/recipes/mustc-v1/ST/seq2seq/hparams/train_espnet.yaml
@@ -36,6 +36,7 @@ lr: 1.0
 ctc_weight: 0.0
 sorting: random
 gradient_clipping: 5.0
+ckpt_interval_minutes: 15 # save checkpoint every N min
 
 # With data_parallel batch_size is split into N jobs
 # With DDP batch_size is multiplied by N jobs
