--- a/recipes/mustc-v1/ST/seq2seq/hparams/train_global_madgrad.yaml
+++ b/recipes/mustc-v1/ST/seq2seq/hparams/train_global_madgrad.yaml
@@ -23,8 +23,8 @@ data_folder: !PLACEHOLDER  # e.g, /localscratch/cv-corpus-5.1-2020-06-22/fr
 accented_letters: True
 tgt_language: de
 font_case: tc
-non_verbal: False
-punctuation: False
+non_verbal: True
+punctuation: True
 skip_prep: False # Skip data preparation
 
 avoid_if_longer_than: 20.0
@@ -35,6 +35,7 @@ number_of_ctc_epochs: 0
 lr: 1.0
 ctc_weight: 0.0
 sorting: random
+gradient_clipping: 5.0
 ckpt_interval_minutes: 15 # save checkpoint every N min
 
 # With data_parallel batch_size is split into N jobs
@@ -185,7 +186,7 @@ model: !new:torch.nn.ModuleList
     - [!ref <enc>, !ref <emb>, !ref <dec>, !ref <ctc_lin>, !ref <seq_lin>]
 
 opt_class: !name:madgrad.MADGRAD
-    lr: 0.0003
+    lr: 0.0005
 
 lr_annealing: !new:speechbrain.nnet.schedulers.NewBobScheduler
     initial_value: !ref <lr>
