--- a/recipes/mustc-v1/ST/seq2seq/hparams/train_global.yaml
+++ b/recipes/mustc-v1/ST/seq2seq/hparams/train_global.yaml
@@ -208,7 +208,7 @@ beam_searcher: !new:speechbrain.decoders.S2SRNNBeamSearcher
     eos_threshold: !ref <eos_threshold>
     using_max_attn_shift: !ref <using_max_attn_shift>
     max_attn_shift: !ref <max_attn_shift>
-    coverage_penalty:
+    coverage_penalty: 0.8
     # temperature: !ref <temperature>
 
 
