--- a/recipes/mustc-v1/ST/seq2seq/hparams/train_global.yaml
+++ b/recipes/mustc-v1/ST/seq2seq/hparams/train_global.yaml
@@ -90,7 +90,7 @@ eos_index: 2
 min_decode_ratio: 0.0
 max_decode_ratio: 0.3
 beam_size: 80
-eos_threshold: 2.0
+eos_threshold: 1.5
 using_max_attn_shift: False
 max_attn_shift: 240
 ctc_weight_decode: 0.0
@@ -195,6 +195,15 @@ lr_annealing: !new:speechbrain.nnet.schedulers.NewBobScheduler
     improvement_threshold: 0.0025
     annealing_factor: 0.8
     patient: 1
+
+greedy_searcher: !new:speechbrain.decoders.seq2seq.S2SRNNGreedySearcher
+    embedding: !ref <emb>
+    decoder: !ref <dec>
+    linear: !ref <seq_lin>
+    bos_index: !ref <bos_index>
+    eos_index: !ref <eos_index>
+    min_decode_ratio: !ref <min_decode_ratio>
+    max_decode_ratio: !ref <max_decode_ratio>
 
 beam_searcher: !new:speechbrain.decoders.S2SRNNBeamSearcher
     embedding: !ref <emb>
