--- a/recipes/mustc-v1/ST/seq2seq/hparams/train_global_best_mad.yaml
+++ b/recipes/mustc-v1/ST/seq2seq/hparams/train_global_best_mad.yaml
@@ -13,7 +13,7 @@ wer_file: !ref <output_folder>/wer.txt
 save_folder: !ref <output_folder>/save
 train_log: !ref <output_folder>/train_log.txt
 
-train_json: !ref <save_folder>/small.json
+train_json: !ref <save_folder>/train_en-de.json
 valid_json: !ref <save_folder>/dev_en-de.json
 test_he_json: !ref <save_folder>/test_he_en-de.json
 test_com_json: !ref <save_folder>/test_com_en-de.json
