--- a/recipes/CommonVoice/ASR/seq2seq/hparams/train_fr_ctcatt_mixer.yaml
+++ b/recipes/CommonVoice/ASR/seq2seq/hparams/train_fr_ctcatt_mixer.yaml
@@ -120,7 +120,7 @@ compute_features: !new:speechbrain.lobes.features.Fbank
     n_mels: !ref <n_mels>
 
 CNN: !new:speechbrain.lobes.models.convolution.ConvolutionFrontEnd
-    input_shape: (8, 10, 80)
+    input_shape: (null, null, 80)
     num_blocks: 3
     num_layers_per_block: 1
     out_channels: (64, 64, 64)
