--- a/recipes/CommonVoice/ASR/seq2seq/hparams/train_fr_ctcatt_mixer.yaml
+++ b/recipes/CommonVoice/ASR/seq2seq/hparams/train_fr_ctcatt_mixer.yaml
@@ -32,7 +32,7 @@ avoid_if_longer_than: 10.0
 # Training parameters
 number_of_epochs: 25
 number_of_ctc_epochs: 20
-lr: 0.001
+lr: 0.0003
 ctc_weight: 0.3
 sorting: ascending
 
@@ -189,15 +189,11 @@ opt_class: !name:torch.optim.AdamW
     eps: 0.000000001
     weight_decay: 0.01
 
-# lr_annealing: !new:speechbrain.nnet.schedulers.NewBobScheduler
-#    initial_value: !ref <lr>
-#    improvement_threshold: 0.0025
-#    annealing_factor: 0.8
-#    patient: 0
-
-lr_annealing: !new:speechbrain.nnet.schedulers.NoamScheduler
-    lr_initial: !ref <lr>
-    n_warmup_steps: 10000
+lr_annealing: !new:speechbrain.nnet.schedulers.NewBobScheduler
+    initial_value: !ref <lr>
+    improvement_threshold: 0.0025
+    annealing_factor: 0.8
+    patient: 0
 
 beam_searcher: !new:speechbrain.decoders.S2SRNNBeamSearcher
     embedding: !ref <emb>
